test/Common/standalone/InvalidEhFrame/Inputs/invalid-eh-frame9.s
.section .eh_frame, "a"
  .byte 0x03
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
